[package]
name = "grabberzonegrabber"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
futures = "0.3.32"
image = "0.25.10"
log = "0.4.29"
reqwest = "0.13.2"
sanitize-filename = "0.6.0"
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
zip = "8.2.0"
